--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "com.atteneder.gltfast": "4.9.1",
+    "com.siccity.gltfutility": "https://github.com/siccity/gltfutility.git",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.collab-proxy": "1.17.6",
     "com.unity.feature.ar": "1.0.1",
@@ -11,6 +11,7 @@
     "com.unity.visualscripting": "1.7.8",
     "com.unity.xr.arcore": "5.0.3",
     "com.unity.xr.management": "4.2.0",
+    "com.yasirkula.nativefilepicker": "https://github.com/yasirkula/UnityNativeFilePicker.git",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
