--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -6,12 +6,13 @@
     "com.unity.feature.ar": "1.0.1",
     "com.unity.feature.development": "1.0.2",
     "com.unity.learn.iet-framework": "3.1.1",
+    "com.unity.mobile.android-logcat": "1.3.2",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.8.0",
     "com.unity.visualscripting": "1.7.8",
     "com.unity.xr.arcore": "5.0.3",
     "com.unity.xr.management": "4.2.0",
-    "com.yasirkula.nativefilepicker": "https://github.com/yasirkula/UnityNativeFilePicker.git",
+    "com.yasirkula.simplefilebrowser": "https://github.com/yasirkula/UnitySimpleFileBrowser.git",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
